src/objects/Route__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cups_3rd_Party__c</fullName>
        <label>Cups 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_3rdParty_Actual__c</fullName>
        <label>Cups Bucketize 3rdParty Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_All_Actual__c</fullName>
        <label>Cups Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Cups Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_JDEOnly__c</fullName>
        <label>Cups JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups__c</fullName>
        <label>Cups</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day10__c</fullName>
        <label>Day 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day11__c</fullName>
        <label>Day 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day12__c</fullName>
        <label>Day 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Stock_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Stock Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Bucketize_All_Actual__c</fullName>
        <label>Large Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Large Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_JDEOnly__c</fullName>
        <label>Large JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large__c</fullName>
        <label>Large</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCO__c</fullName>
        <label>MCO</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_3rd_Party__c</fullName>
        <label>MTTO 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_All__c</fullName>
        <label>MTTO All</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_JDEOnly__c</fullName>
        <label>MTTO JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Machines__c</fullName>
        <label>No of Machines</label>
        <summaryForeignKey>Route_Line_Item__c.RouteId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nordics_10__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nordics_11__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nordics_12__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Routes (Required Operator)</relationshipLabel>
        <relationshipName>Routes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Small_3rd_Party__c</fullName>
        <label>Small 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_3rdParty_Actual__c</fullName>
        <label>Small Bucketize 3rdParty Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_All_Actual__c</fullName>
        <label>Small Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Small Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_JDEOnly__c</fullName>
        <label>Small JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small__c</fullName>
        <label>Small</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TS_AccountLocationName__c</fullName>
        <label>TS_AccountLocationName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_OperatorHRNumber__c</fullName>
        <label>TS_PreferredOperatorHRNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_OperatorName__c</fullName>
        <label>TS_PreferredOperatorName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_RequiredOperatorHRNumber__c</fullName>
        <label>TS_RequiredOperatorHRNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_RequiredOperatorName__c</fullName>
        <label>TS_RequiredOperatorName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Route_Number__c</fullName>
        <label>Unique Route Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All_Routes</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>No_of_Machines__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <label>All Routes</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Check</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day6__c</field>
            <operation>greaterThan</operation>
            <value>0,1</value>
        </filters>
        <filters>
            <field>Day7__c</field>
            <operation>greaterThan</operation>
            <value>0,1</value>
        </filters>
        <label>MTTO Check</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Day_1</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day1__c</field>
            <operation>greaterThan</operation>
            <value>8</value>
        </filters>
        <label>MTTO Day 1</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Day_2</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day2__c</field>
            <operation>greaterThan</operation>
            <value>8</value>
        </filters>
        <label>MTTO Day 2</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Day_3</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day3__c</field>
            <operation>greaterThan</operation>
            <value>8</value>
        </filters>
        <label>MTTO Day 3</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Day_4</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day4__c</field>
            <operation>greaterThan</operation>
            <value>8</value>
        </filters>
        <label>MTTO Day 4</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Day_5</fullName>
        <columns>NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Required_Operator__c</columns>
        <columns>Day1__c</columns>
        <columns>Day2__c</columns>
        <columns>Day3__c</columns>
        <columns>Day4__c</columns>
        <columns>Day5__c</columns>
        <columns>Day8__c</columns>
        <columns>Day9__c</columns>
        <columns>Day10__c</columns>
        <columns>Day11__c</columns>
        <columns>Day12__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <filters>
            <field>Day5__c</field>
            <operation>greaterThan</operation>
            <value>8</value>
        </filters>
        <label>MTTO Day 5</label>
    </listViews>
    <nameField>
        <label>Route Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <recordTypes>
        <fullName>Route</fullName>
        <active>true</active>
        <description>Record type that will serve as default for all Route records</description>
        <label>Route</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TS_CannotProvidebothOperators</fullName>
        <active>true</active>
        <description>You can only provide required operator or preferred operator. - Not both.</description>
        <errorConditionFormula>IF($Setup.ValidationRulesSettings__c.Route__c,
NOT(ISBLANK( Preferred_Operator__c )) &amp;&amp;
NOT(ISBLANK( Required_Operator__c )), False)</errorConditionFormula>
        <errorMessage>You can only provide required operator or preferred operator, not both.</errorMessage>
    </validationRules>
</CustomObject>